--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -7,36 +7,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/title_height"
-        android:background="@color/myyellow"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="注册"
-            android:textColor="@color/black"
-            android:textSize="16dp" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="15dp">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="手机号"
-            android:textColor="@color/textblack" />
+            android:src="@drawable/icon_phone" />
 
         <EditText
             android:id="@+id/et_phone"
@@ -64,11 +43,10 @@
         android:orientation="horizontal"
         android:padding="15dp">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="密码"
-            android:textColor="@color/textblack" />
+            android:src="@drawable/icon_pwd" />
 
         <EditText
             android:id="@+id/et_password"
@@ -96,11 +74,10 @@
         android:orientation="horizontal"
         android:padding="15dp">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="确认密码"
-            android:textColor="@color/textblack" />
+            android:src="@drawable/icon_pwd" />
 
         <EditText
             android:id="@+id/et_repassword"
@@ -128,11 +105,10 @@
         android:orientation="horizontal"
         android:padding="15dp">
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="短信验证码"
-            android:textColor="@color/textblack" />
+            android:src="@drawable/icon_sms_code" />
 
         <EditText
             android:id="@+id/et_code"
@@ -175,4 +151,27 @@
         android:text="立即注册"
         android:textColor="@color/white"
         android:textSize="16dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我已阅读并同意"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <TextView
+            android:id="@+id/tv_agreement"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="《青春餐厅协议》"
+            android:textColor="@color/myyellow"
+            android:textSize="14dp" />
+    </LinearLayout>
 </LinearLayout>
