--- a/app/src/main/res/layout/fragment_home_lv_header.xml
+++ b/app/src/main/res/layout/fragment_home_lv_header.xml
@@ -5,6 +5,46 @@
     android:background="@color/gray_bg"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/myyellow"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/tv_office_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="经三商圈"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/home_arrow_down_iocn" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"
+            android:background="@drawable/oval_home_search"
+            android:gravity="center_vertical|right"
+            android:paddingBottom="5dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/home_serarch_icon" />
+        </LinearLayout>
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/rl_banner"
         android:layout_width="match_parent"
@@ -46,20 +86,22 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="@color/gray_bg"/>
+        android:background="@color/gray_bg" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/divideline"/>
+        android:background="@color/divideline" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_below="@id/rl_banner"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:background="@color/white"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -145,8 +187,9 @@
                 android:textSize="14dp" />
         </LinearLayout>
     </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/divideline"/>
+        android:background="@color/divideline" />
 </LinearLayout>
