--- a/app/src/main/res/layout/item_homegridview1.xml
+++ b/app/src/main/res/layout/item_homegridview1.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_name"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="米饭+鱼香肉丝（赠送煎蛋一枚）"
                 android:textColor="@color/textblack"
@@ -53,15 +53,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_desc"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="10dp"
+                android:gravity="bottom"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_price"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="bottom"
                     android:text="优惠价：10元/份"
 
                     android:textColor="@color/textblack"
