--- a/app/src/main/res/layout/fragment_home_lv_header.xml
+++ b/app/src/main/res/layout/fragment_home_lv_header.xml
@@ -104,6 +104,7 @@
         android:paddingRight="10dp">
 
         <LinearLayout
+            android:id="@+id/ll_taocan"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -125,6 +126,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_chaocai"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -146,6 +148,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_mianshi"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -167,6 +170,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_yinliao"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
