--- a/app/src/main/res/drawable/border_gray_bg.xml
+++ b/app/src/main/res/drawable/border_gray_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1px"
-        android:color="@color/divideline" />
+        android:color="#e8e8e8" />
 </shape>
