--- a/app/src/main/res/layout/fragment_moregoods_layout.xml
+++ b/app/src/main/res/layout/fragment_moregoods_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <GridView
+    <ListView
         android:id="@+id/gv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +13,8 @@
         android:layout_marginRight="10dp"
         android:overScrollMode="never"
         android:scrollbars="none"
-        android:horizontalSpacing="15dp"
+        android:divider="@color/transparent"
+        android:dividerHeight="0dp"
         android:listSelector="@color/transparent"
         android:numColumns="1"
         android:verticalSpacing="5dp" />
