--- a/app/src/main/res/layout/item_homegridview2.xml
+++ b/app/src/main/res/layout/item_homegridview2.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="@drawable/border_gray_bg"
         android:gravity="center"
         android:orientation="vertical">
@@ -23,9 +23,7 @@
         <!--android:layout_height="wrap_content"不能设置match_parent否则内容过长显示不全-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="32dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -47,7 +45,7 @@
                 android:gravity="center"
                 android:text="￥10元"
                 android:textColor="@color/myyellow"
-                android:textSize="12dp" />
+                android:textSize="11dp" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
