--- a/app/src/main/res/layout/item_homelistview.xml
+++ b/app/src/main/res/layout/item_homelistview.xml
@@ -18,7 +18,7 @@
     <LinearLayout
         android:id="@+id/ll_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -31,33 +31,33 @@
             android:id="@+id/tv_type_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:text="优惠专区"
             android:textColor="@color/textblack"
-            android:textSize="16dp"
+            android:textSize="17dp"
             android:textStyle="bold" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="16dp"
             android:src="@drawable/right_arrow_black" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/divideline" />
+        android:background="#e6e6e6" />
 
     <com.mobile.younthcanteen.ui.GridViewForScroll
         android:id="@+id/gv_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:horizontalSpacing="8dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:horizontalSpacing="15dp"
         android:listSelector="@color/transparent"
         android:numColumns="2"
         android:verticalSpacing="5dp" />
