--- a/app/src/main/res/layout/item_moregoods_gridview.xml
+++ b/app/src/main/res/layout/item_moregoods_gridview.xml
@@ -8,29 +8,27 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv"
-            android:layout_width="0dp"
-            android:layout_height="120dp"
-            android:layout_weight="2"
+            android:layout_width="124dp"
+            android:layout_height="78dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/border_gray_bg"
             android:padding="1px"
             android:scaleType="fitXY"
             android:src="@color/gray_bg" />
         <!--android:layout_height="wrap_content"不能设置match_parent否则内容过长显示不全-->
         <RelativeLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_weight="3"
+            android:layout_marginLeft="10dp"
             android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/tv_name"
+                android:layout_marginTop="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -43,35 +41,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_name"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="米饭+鱼香肉丝（赠送煎蛋一枚）"
                 android:textColor="@color/textblack"
-                android:textSize="12dp" />
+                android:textSize="11dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_desc"
-                android:layout_marginTop="10dp"
-                android:gravity="bottom"
+                android:layout_marginTop="8dp"
+                android:gravity="top"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_price"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="bottom"
                     android:text="优惠价：10元/份"
-
                     android:textColor="@color/textblack"
-                    android:textSize="12dp" />
+                    android:textSize="11dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
                     android:background="@color/home_btn_red"
                     android:gravity="center"
                     android:paddingBottom="5dp"
@@ -88,6 +84,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_marginTop="10dp"
-        android:background="@color/divideline" />
+        android:layout_marginTop="8dp"
+        android:background="#d3d3d3" />
 </LinearLayout>
