--- a/app/src/main/res/layout/activity_add_remark_layout.xml
+++ b/app/src/main/res/layout/activity_add_remark_layout.xml
@@ -38,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_bg"
+            android:background="@drawable/border_gray_bg_remark_btn"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_bg"
+            android:background="@drawable/border_gray_bg_remark_btn"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_bg"
+            android:background="@drawable/border_gray_bg_remark_btn"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
@@ -87,7 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_bg"
+            android:background="@drawable/border_gray_bg_remark_btn"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_bg"
+            android:background="@drawable/border_gray_bg_remark_btn"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
@@ -115,7 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_weight="1"
-            android:background="@drawable/border_gray_bg"
+            android:background="@drawable/border_gray_bg_remark_btn"
             android:gravity="center"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
