--- a/app/src/main/res/layout/activity_goodsdetailinfo_layout.xml
+++ b/app/src/main/res/layout/activity_goodsdetailinfo_layout.xml
@@ -123,18 +123,20 @@
 
                     <TextView
                         android:id="@+id/tv_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="五香烤肠"
+                        android:gravity="left"
                         android:textColor="@color/textblack"
                         android:textSize="18dp" />
 
                     <TextView
                         android:id="@+id/tv_price"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="5dp"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
                         android:text="￥2元"
                         android:textColor="@color/text_price_red"
                         android:textSize="20dp" />
