--- a/app/src/main/res/layout/activity_more_goods_layout.xml
+++ b/app/src/main/res/layout/activity_more_goods_layout.xml
@@ -3,19 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <com.mobile.younthcanteen.ui.TabPageIndicator
-        android:id="@+id/tab_page_indicator"
-        android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:background="@color/white"
-        android:visibility="visible" />
-
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/tab_page_indicator"
         android:background="@color/white"
         android:overScrollMode="never" />
 </LinearLayout>
