--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:overScrollMode="never"
-
     android:scrollbars="none">
 
     <LinearLayout
@@ -22,14 +20,12 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <com.mobile.younthcanteen.ui.CircleImageView
+            <ImageView
                 android:id="@+id/iv_usericon"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/user_icon_default"
-                app:border_color="#ffe69a"
-                app:border_width="2dp" />
+                android:src="@drawable/user_icon_default"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
