--- a/app/src/main/res/layout/fragment_moregoods_layout.xml
+++ b/app/src/main/res/layout/fragment_moregoods_layout.xml
@@ -3,9 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     <ListView
-        android:id="@+id/gv"
+        android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
@@ -18,4 +21,5 @@
         android:listSelector="@color/transparent"
         android:numColumns="1"
         android:verticalSpacing="5dp" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
