--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -35,7 +35,7 @@
             android:background="@color/white"
             android:visibility="visible" />
 
-        <android.support.v4.view.ViewPager
+        <com.mobile.younthcanteen.ui.NoScrollViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
