--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -66,7 +66,7 @@
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:src="@drawable/pingjia_icon" />
+                android:src="@drawable/customer_yue_icon" />
 
             <TextView
                 android:layout_width="0dp"
@@ -102,7 +102,7 @@
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:src="@drawable/pingjia_icon" />
+                android:src="@drawable/customer_jifen_icon" />
 
             <TextView
                 android:layout_width="0dp"
