--- a/app/src/main/res/layout/fragment_moregoods_layout.xml
+++ b/app/src/main/res/layout/fragment_moregoods_layout.xml
@@ -6,20 +6,18 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_height="match_parent" >
     <ListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
         android:overScrollMode="never"
         android:scrollbars="none"
         android:divider="@color/transparent"
         android:dividerHeight="0dp"
-        android:listSelector="@color/transparent"
-        android:numColumns="1"
-        android:verticalSpacing="5dp" />
+        android:listSelector="@color/transparent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
