--- a/app/src/main/res/layout/activity_myaccount_layout.xml
+++ b/app/src/main/res/layout/activity_myaccount_layout.xml
@@ -31,11 +31,10 @@
             android:id="@+id/iv_usericon"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
             android:src="@drawable/user_icon_default"
-            app:border_color="@color/white"
-            app:border_width="2dp" />
+            app:border_color="#ffe69a"
+            app:border_width="1dp" />
 
         <ImageView
             android:layout_width="10dp"
