--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -20,12 +21,14 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
+            <com.mobile.younthcanteen.ui.CircleImageView
                 android:id="@+id/iv_usericon"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/user_icon_default"/>
+                android:src="@drawable/user_icon_default"
+                app:border_color="#ffe69a"
+                app:border_width="1dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
