基本功能完成

--- a/app/src/main/res/layout/activity_goodsdetailinfo_layout.xml
+++ b/app/src/main/res/layout/activity_goodsdetailinfo_layout.xml
@@ -59,7 +59,7 @@
         android:layout_marginLeft="8dp"
         android:layout_toRightOf="@id/iv_cart"
         android:layout_weight="1"
-        android:text="￥0"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="20dp" />
 
@@ -78,7 +78,7 @@
             <RelativeLayout
                 android:id="@+id/rl_container"
                 android:layout_width="match_parent"
-                android:layout_height="260dp">
+                android:layout_height="250dp">
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewpager"
@@ -126,7 +126,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="五香烤肠"
+                        android:text=""
                         android:gravity="left"
                         android:textColor="@color/textblack"
                         android:textSize="18dp" />
@@ -135,11 +135,11 @@
                         android:id="@+id/tv_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="10dp"
                         android:layout_marginLeft="5dp"
-                        android:text="￥2元"
+                        android:text=""
                         android:textColor="@color/text_price_red"
-                        android:textSize="20dp" />
+                        android:textSize="24dp" />
 
                     <LinearLayout
                         android:id="@+id/ll_add_to_cart"
@@ -228,7 +228,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="5dp"
                             android:text="商品详情："
-                            android:textColor="@color/grayblack"
+                            android:textColor="@color/textblack"
                             android:textSize="16dp" />
                     </LinearLayout>
 
@@ -238,8 +238,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="套餐含：发的发的发的发大发大发发大法师打发大幅度发"
-                        android:textColor="@color/textblack"
+                        android:text=""
+                        android:textColor="@color/grayblack"
+                        android:lineSpacingExtra="5dp"
                         android:textSize="14dp" />
                 </LinearLayout>
             </LinearLayout>
