--- a/app/src/main/res/layout/activity_orderdetail_layout.xml
+++ b/app/src/main/res/layout/activity_orderdetail_layout.xml
@@ -19,6 +19,7 @@
                 android:id="@+id/iv"
                 android:layout_width="180dp"
                 android:layout_height="match_parent" />
+
             <ImageView
                 android:id="@+id/iv_right_arrow"
                 android:layout_width="wrap_content"
@@ -27,12 +28,13 @@
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:src="@drawable/right_arrow" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dp"
-                android:layout_toRightOf="@id/iv"
                 android:layout_toLeftOf="@id/iv_right_arrow"
+                android:layout_toRightOf="@id/iv"
                 android:orientation="vertical">
 
                 <TextView
@@ -40,8 +42,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:gravity="bottom"
                     android:ellipsize="end"
+                    android:gravity="bottom"
                     android:singleLine="true"
                     android:text="两荤两素套餐"
                     android:textColor="@color/textblack"
@@ -122,7 +124,37 @@
             android:background="@color/divideline" />
 
         <TextView
-            android:id="@+id/tv_payTime"
+            android:id="@+id/tv_addTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_consignee"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -152,7 +184,23 @@
             android:background="@color/divideline" />
 
         <TextView
-            android:id="@+id/tv_deliveryPhone"
+            android:id="@+id/tv_payTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_payType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
@@ -197,7 +245,8 @@
 
             <TextView
                 android:id="@+id/tv_orderMoney"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:text="￥20元"
@@ -206,25 +255,142 @@
 
 
             <TextView
-                android:id="@+id/tv_payback_status"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="(申请退款中)"
-                android:textColor="@color/grayblack"
-                android:textSize="14dp" />
-
-            <TextView
                 android:id="@+id/tv_apply_for_refund"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="14dp"
                 android:background="@drawable/login_btn_enable"
                 android:padding="10dp"
+                android:text="申请退款"
                 android:textColor="@color/textblack"
-                android:text="申请退款"/>
+                android:textSize="14dp" />
+
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_deliveryTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_shoptel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_deliveryPhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_paybackstatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_backApplyTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_backApplyResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_backAgreeTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
+        <TextView
+            android:id="@+id/tv_backOverTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:padding="15dp"
+            android:text="订单号：1223123123"
+            android:textColor="@color/textblack"
+            android:textSize="14dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divideline" />
+
 
         <View
             android:layout_width="match_parent"
