--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -141,6 +141,37 @@
         android:layout_height="1px"
         android:background="@color/divideline" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/recommend_icon" />
+
+        <EditText
+            android:id="@+id/et_recommend_code"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:hint="请输入推荐码(选填)"
+            android:inputType="textPassword"
+            android:maxLength="15"
+            android:singleLine="true"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divideline" />
+
     <Button
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
@@ -163,6 +194,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我已阅读并同意"
+            android:checked="true"
             android:textColor="@color/textblack"
             android:textSize="14dp" />
 
