--- a/app/src/main/res/layout/item_moregoods_gridview.xml
+++ b/app/src/main/res/layout/item_moregoods_gridview.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <ImageView
@@ -31,7 +32,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="铁板烧烤"
                 android:textColor="@color/black"
                 android:textSize="14dp" />
@@ -42,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_name"
                 android:layout_marginTop="8dp"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="米饭+鱼香肉丝（赠送煎蛋一枚）"
                 android:textColor="@color/textblack"
                 android:textSize="11dp" />
@@ -60,7 +61,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="bottom"
+                    android:gravity="bottom|left"
                     android:text="优惠价：10元/份"
                     android:textColor="@color/textblack"
                     android:textSize="11dp" />
