--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -8,8 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_vertical"
+        android:background="@color/myyellow"
         android:paddingBottom="15dp"
         android:paddingTop="15dp">
 
@@ -18,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="购物车"
-            android:textColor="@color/textblack"
+            android:textColor="@color/white"
             android:textSize="20dp" />
 
         <TextView
@@ -26,12 +25,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:background="@color/white"
+            android:layout_centerVertical="true"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="15dp"
             android:text="编辑"
-            android:textColor="@color/textblack"
+            android:textColor="@color/white"
             android:textSize="16dp" />
 
     </RelativeLayout>
