--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -8,7 +8,7 @@
         android:id="@+id/ll_header"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"
-        android:background="#fff"
+        android:background="@color/myyellow"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="订单"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18dp" />
     </LinearLayout>
 
