提交二次修订版

--- a/app/src/main/res/layout/activity_orderdetail_layout.xml
+++ b/app/src/main/res/layout/activity_orderdetail_layout.xml
@@ -236,6 +236,7 @@
             android:padding="15dp">
 
             <TextView
+                android:id="@+id/tv_ordermoney_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
