--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -287,7 +287,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="客服电话:"
-                android:textColor="@color/grayblack"
+                android:textColor="@color/myyellow"
                 android:textSize="14dp" />
 
             <TextView
