--- a/app/src/main/res/layout/fragment_paid_layout.xml
+++ b/app/src/main/res/layout/fragment_paid_layout.xml
@@ -35,9 +35,17 @@
             android:textColor="@color/textblack"
             android:textSize="16dp" />
     </LinearLayout>
-    <ListView
-        android:id="@+id/lv_paid_order"
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipelayout"
         android:layout_width="match_parent"
-        android:overScrollMode="never"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/lv_paid_order"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
